// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpers / cssSnapshots with a Bootstrap import should find external files 1`] = `"test"`;

exports[`helpers / cssSnapshots with a custom renderer should process a file and log 1`] = `
{
  "exampleFileContents": "exampleFileContents",
  "exampleFileName": "exampleFileName",
}
`;

exports[`helpers / cssSnapshots with allowUnknownClassnames enabled should return a dts file that allows any string value 1`] = `
"declare let _classes: {
  'localClassInsideGlobal': string;
  'localClass': string;
  'localClass2': string;
  'localClassInsideLocal': string;
  'reservedWords': string;
  'default': string;
  'const': string;
  'nestedClassParent': string;
  'childClass': string;
  'nestedClassParentExtended': string;
  'section1': string;
  'section2': string;
  'section3': string;
  'section4': string;
  'section5': string;
  'section6': string;
  'section7': string;
  'section8': string;
  'section9': string;
  'classWithMixin': string;
  'appLogo': string;
  'appLogo': string;
  'myAnimation': string;
  'myFolderIndex': string;
  [key: string]: string;
};
export default _classes;
export let localClassInsideGlobal: string;
export let localClass: string;
export let localClass2: string;
export let localClassInsideLocal: string;
export let reservedWords: string;
export let nestedClassParent: string;
export let childClass: string;
export let nestedClassParentExtended: string;
export let section1: string;
export let section2: string;
export let section3: string;
export let section4: string;
export let section5: string;
export let section6: string;
export let section7: string;
export let section8: string;
export let section9: string;
export let classWithMixin: string;
export let appLogo: string;
export let appLogo: string;
export let myAnimation: string;
export let myFolderIndex: string;
"
`;

exports[`helpers / cssSnapshots with baseUrl and paths in compilerOptions sass should find the files 1`] = `
{
  "big-font": "big-font",
  "class-with-mixin": "class-with-mixin",
  "public-module": "public-module",
}
`;

exports[`helpers / cssSnapshots with file 'empty.module.less' createExports should create an exports file 1`] = `
"declare let _classes: {
  
};
export default _classes;
"
`;

exports[`helpers / cssSnapshots with file 'empty.module.less' getCssExports should return an object matching expected CSS 1`] = `{}`;

exports[`helpers / cssSnapshots with file 'empty.module.less' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let _classes: {
  
};
export default _classes;

export const __cssModule: true;
export type AllClassNames = '';"
`;

exports[`helpers / cssSnapshots with file 'empty.module.sass' createExports should create an exports file 1`] = `
"declare let _classes: {
  
};
export default _classes;
"
`;

exports[`helpers / cssSnapshots with file 'empty.module.sass' getCssExports should return an object matching expected CSS 1`] = `{}`;

exports[`helpers / cssSnapshots with file 'empty.module.sass' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let _classes: {
  
};
export default _classes;

export const __cssModule: true;
export type AllClassNames = '';"
`;

exports[`helpers / cssSnapshots with file 'empty.module.scss' createExports should create an exports file 1`] = `
"declare let _classes: {
  
};
export default _classes;
"
`;

exports[`helpers / cssSnapshots with file 'empty.module.scss' getCssExports should return an object matching expected CSS 1`] = `{}`;

exports[`helpers / cssSnapshots with file 'empty.module.scss' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let _classes: {
  
};
export default _classes;

export const __cssModule: true;
export type AllClassNames = '';"
`;

exports[`helpers / cssSnapshots with file 'import.module.css' createExports should create an exports file 1`] = `
"declare let _classes: {
  'classA': string;
  'ClassB': string;
  'class-c': string;
  'class_d': string;
  'parent': string;
  'childA': string;
  'childB': string;
  'nestedChild': string;
  'composed': string;
  'composed-from-other-file': string;
  'fadeIn': string;
};
export default _classes;
export let classA: string;
export let ClassB: string;
export let class_d: string;
export let parent: string;
export let childA: string;
export let childB: string;
export let nestedChild: string;
export let composed: string;
export let fadeIn: string;
"
`;

exports[`helpers / cssSnapshots with file 'import.module.css' getCssExports should return an object matching expected CSS 1`] = `
{
  "ClassB": "ClassB",
  "childA": "childA",
  "childB": "childB",
  "class-c": "class-c",
  "classA": "classA",
  "class_d": "class_d",
  "composed": "composed classA",
  "composed-from-other-file": "composed-from-other-file i__imported_className_1",
  "fadeIn": "fadeIn",
  "nestedChild": "nestedChild",
  "parent": "parent",
}
`;

exports[`helpers / cssSnapshots with file 'import.module.css' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let _classes: {
  'classA': string;
  'ClassB': string;
  'class-c': string;
  'class_d': string;
  'parent': string;
  'childA': string;
  'childB': string;
  'nestedChild': string;
  'composed': string;
  'composed-from-other-file': string;
  'fadeIn': string;
};
export default _classes;
export let classA: string;
export let ClassB: string;
export let class_d: string;
export let parent: string;
export let childA: string;
export let childB: string;
export let nestedChild: string;
export let composed: string;
export let fadeIn: string;

export const __cssModule: true;
export type AllClassNames = 'classA' | 'ClassB' | 'class-c' | 'class_d' | 'parent' | 'childA' | 'childB' | 'nestedChild' | 'composed' | 'composed-from-other-file' | 'fadeIn';"
`;

exports[`helpers / cssSnapshots with file 'import.module.less' createExports should create an exports file 1`] = `
"declare let _classes: {
  'nested-class-parent': string;
  'child-class': string;
  'selector-blue': string;
  'selector-green': string;
  'selector-red': string;
  'column-1': string;
  'column-2': string;
  'column-3': string;
  'column-4': string;
  'color-set': string;
};
export default _classes;
"
`;

exports[`helpers / cssSnapshots with file 'import.module.less' getCssExports should return an object matching expected CSS 1`] = `
{
  "child-class": "child-class",
  "color-set": "color-set",
  "column-1": "column-1",
  "column-2": "column-2",
  "column-3": "column-3",
  "column-4": "column-4",
  "nested-class-parent": "nested-class-parent",
  "selector-blue": "selector-blue",
  "selector-green": "selector-green",
  "selector-red": "selector-red",
}
`;

exports[`helpers / cssSnapshots with file 'import.module.less' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let _classes: {
  'nested-class-parent': string;
  'child-class': string;
  'selector-blue': string;
  'selector-green': string;
  'selector-red': string;
  'column-1': string;
  'column-2': string;
  'column-3': string;
  'column-4': string;
  'color-set': string;
};
export default _classes;

export const __cssModule: true;
export type AllClassNames = 'nested-class-parent' | 'child-class' | 'selector-blue' | 'selector-green' | 'selector-red' | 'column-1' | 'column-2' | 'column-3' | 'column-4' | 'color-set';"
`;

exports[`helpers / cssSnapshots with file 'postcss.module.css' createExports should create an exports file 1`] = `
"declare let _classes: {
  'classA': string;
  'nestedA': string;
  'nested_B': string;
  'deeplyNested': string;
  'nested-c': string;
  'parent': string;
};
export default _classes;
export let classA: string;
export let nestedA: string;
export let nested_B: string;
export let deeplyNested: string;
export let parent: string;
"
`;

exports[`helpers / cssSnapshots with file 'postcss.module.css' getCssExports should return an object matching expected CSS 1`] = `
{
  "classA": "classA",
  "deeplyNested": "deeplyNested",
  "nested-c": "nested-c",
  "nestedA": "nestedA",
  "nested_B": "nested_B",
  "parent": "parent",
}
`;

exports[`helpers / cssSnapshots with file 'postcss.module.css' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let _classes: {
  'classA': string;
  'nestedA': string;
  'nested_B': string;
  'deeplyNested': string;
  'nested-c': string;
  'parent': string;
};
export default _classes;
export let classA: string;
export let nestedA: string;
export let nested_B: string;
export let deeplyNested: string;
export let parent: string;

export const __cssModule: true;
export type AllClassNames = 'classA' | 'nestedA' | 'nested_B' | 'deeplyNested' | 'nested-c' | 'parent';"
`;

exports[`helpers / cssSnapshots with file 'test.module.css' createExports should create an exports file 1`] = `
"declare let _classes: {
  'classA': string;
  'ClassB': string;
  'class-c': string;
  'class_d': string;
  'parent': string;
  'childA': string;
  'childB': string;
  'nestedChild': string;
  'composed': string;
  'composed-from-other-file': string;
  'fadeIn': string;
};
export default _classes;
export let classA: string;
export let ClassB: string;
export let class_d: string;
export let parent: string;
export let childA: string;
export let childB: string;
export let nestedChild: string;
export let composed: string;
export let fadeIn: string;
"
`;

exports[`helpers / cssSnapshots with file 'test.module.css' getCssExports should return an object matching expected CSS 1`] = `
{
  "ClassB": "ClassB",
  "childA": "childA",
  "childB": "childB",
  "class-c": "class-c",
  "classA": "classA",
  "class_d": "class_d",
  "composed": "composed classA",
  "composed-from-other-file": "composed-from-other-file i__imported_className_2",
  "fadeIn": "fadeIn",
  "nestedChild": "nestedChild",
  "parent": "parent",
}
`;

exports[`helpers / cssSnapshots with file 'test.module.css' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let _classes: {
  'classA': string;
  'ClassB': string;
  'class-c': string;
  'class_d': string;
  'parent': string;
  'childA': string;
  'childB': string;
  'nestedChild': string;
  'composed': string;
  'composed-from-other-file': string;
  'fadeIn': string;
};
export default _classes;
export let classA: string;
export let ClassB: string;
export let class_d: string;
export let parent: string;
export let childA: string;
export let childB: string;
export let nestedChild: string;
export let composed: string;
export let fadeIn: string;

export const __cssModule: true;
export type AllClassNames = 'classA' | 'ClassB' | 'class-c' | 'class_d' | 'parent' | 'childA' | 'childB' | 'nestedChild' | 'composed' | 'composed-from-other-file' | 'fadeIn';"
`;

exports[`helpers / cssSnapshots with file 'test.module.less' createExports should create an exports file 1`] = `
"declare let _classes: {
  'nested-class-parent': string;
  'child-class': string;
  'selector-blue': string;
  'selector-green': string;
  'selector-red': string;
  'column-1': string;
  'column-2': string;
  'column-3': string;
  'column-4': string;
  'color-set': string;
};
export default _classes;
"
`;

exports[`helpers / cssSnapshots with file 'test.module.less' getCssExports should return an object matching expected CSS 1`] = `
{
  "child-class": "child-class",
  "color-set": "color-set",
  "column-1": "column-1",
  "column-2": "column-2",
  "column-3": "column-3",
  "column-4": "column-4",
  "nested-class-parent": "nested-class-parent",
  "selector-blue": "selector-blue",
  "selector-green": "selector-green",
  "selector-red": "selector-red",
}
`;

exports[`helpers / cssSnapshots with file 'test.module.less' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let _classes: {
  'nested-class-parent': string;
  'child-class': string;
  'selector-blue': string;
  'selector-green': string;
  'selector-red': string;
  'column-1': string;
  'column-2': string;
  'column-3': string;
  'column-4': string;
  'color-set': string;
};
export default _classes;

export const __cssModule: true;
export type AllClassNames = 'nested-class-parent' | 'child-class' | 'selector-blue' | 'selector-green' | 'selector-red' | 'column-1' | 'column-2' | 'column-3' | 'column-4' | 'color-set';"
`;

exports[`helpers / cssSnapshots with file 'test.module.sass' createExports should create an exports file 1`] = `
"declare let _classes: {
  'local-class-inside-global': string;
  'local-class': string;
  'local-class-2': string;
  'local-class-inside-local': string;
  'reserved-words': string;
  'default': string;
  'const': string;
  'nested-class-parent': string;
  'child-class': string;
  'nested-class-parent--extended': string;
  'section-1': string;
  'section-2': string;
  'section-3': string;
  'section-4': string;
  'section-5': string;
  'section-6': string;
  'section-7': string;
  'section-8': string;
  'section-9': string;
  'class-with-mixin': string;
};
export default _classes;
"
`;

exports[`helpers / cssSnapshots with file 'test.module.sass' getCssExports should return an object matching expected CSS 1`] = `
{
  "child-class": "child-class",
  "class-with-mixin": "class-with-mixin",
  "const": "const",
  "default": "default",
  "local-class": "local-class",
  "local-class-2": "local-class-2",
  "local-class-inside-global": "local-class-inside-global",
  "local-class-inside-local": "local-class-inside-local",
  "nested-class-parent": "nested-class-parent",
  "nested-class-parent--extended": "nested-class-parent--extended",
  "reserved-words": "reserved-words",
  "section-1": "section-1",
  "section-2": "section-2",
  "section-3": "section-3",
  "section-4": "section-4",
  "section-5": "section-5",
  "section-6": "section-6",
  "section-7": "section-7",
  "section-8": "section-8",
  "section-9": "section-9",
}
`;

exports[`helpers / cssSnapshots with file 'test.module.sass' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let _classes: {
  'local-class-inside-global': string;
  'local-class': string;
  'local-class-2': string;
  'local-class-inside-local': string;
  'reserved-words': string;
  'default': string;
  'const': string;
  'nested-class-parent': string;
  'child-class': string;
  'nested-class-parent--extended': string;
  'section-1': string;
  'section-2': string;
  'section-3': string;
  'section-4': string;
  'section-5': string;
  'section-6': string;
  'section-7': string;
  'section-8': string;
  'section-9': string;
  'class-with-mixin': string;
};
export default _classes;

export const __cssModule: true;
export type AllClassNames = 'local-class-inside-global' | 'local-class' | 'local-class-2' | 'local-class-inside-local' | 'reserved-words' | 'default' | 'const' | 'nested-class-parent' | 'child-class' | 'nested-class-parent--extended' | 'section-1' | 'section-2' | 'section-3' | 'section-4' | 'section-5' | 'section-6' | 'section-7' | 'section-8' | 'section-9' | 'class-with-mixin';"
`;

exports[`helpers / cssSnapshots with file 'test.module.scss' createExports should create an exports file 1`] = `
"declare let _classes: {
  'local-class-inside-global': string;
  'local-class': string;
  'local-class-2': string;
  'local-class-inside-local': string;
  'reserved-words': string;
  'default': string;
  'const': string;
  'nested-class-parent': string;
  'child-class': string;
  'nested-class-parent--extended': string;
  'section-1': string;
  'section-2': string;
  'section-3': string;
  'section-4': string;
  'section-5': string;
  'section-6': string;
  'section-7': string;
  'section-8': string;
  'section-9': string;
  'class-with-mixin': string;
  'App_logo': string;
  'App-logo': string;
  'my-animation': string;
  'my-folder-index': string;
};
export default _classes;
export let App_logo: string;
"
`;

exports[`helpers / cssSnapshots with file 'test.module.scss' getCssExports should return an object matching expected CSS 1`] = `
{
  "App-logo": "App-logo",
  "App_logo": "App_logo",
  "child-class": "child-class",
  "class-with-mixin": "class-with-mixin",
  "const": "const",
  "default": "default",
  "local-class": "local-class",
  "local-class-2": "local-class-2",
  "local-class-inside-global": "local-class-inside-global",
  "local-class-inside-local": "local-class-inside-local",
  "my-animation": "my-animation",
  "my-folder-index": "my-folder-index",
  "nested-class-parent": "nested-class-parent",
  "nested-class-parent--extended": "nested-class-parent--extended",
  "reserved-words": "reserved-words",
  "section-1": "section-1",
  "section-2": "section-2",
  "section-3": "section-3",
  "section-4": "section-4",
  "section-5": "section-5",
  "section-6": "section-6",
  "section-7": "section-7",
  "section-8": "section-8",
  "section-9": "section-9",
}
`;

exports[`helpers / cssSnapshots with file 'test.module.scss' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let _classes: {
  'local-class-inside-global': string;
  'local-class': string;
  'local-class-2': string;
  'local-class-inside-local': string;
  'reserved-words': string;
  'default': string;
  'const': string;
  'nested-class-parent': string;
  'child-class': string;
  'nested-class-parent--extended': string;
  'section-1': string;
  'section-2': string;
  'section-3': string;
  'section-4': string;
  'section-5': string;
  'section-6': string;
  'section-7': string;
  'section-8': string;
  'section-9': string;
  'class-with-mixin': string;
  'App_logo': string;
  'App-logo': string;
  'my-animation': string;
  'my-folder-index': string;
};
export default _classes;
export let App_logo: string;

export const __cssModule: true;
export type AllClassNames = 'local-class-inside-global' | 'local-class' | 'local-class-2' | 'local-class-inside-local' | 'reserved-words' | 'default' | 'const' | 'nested-class-parent' | 'child-class' | 'nested-class-parent--extended' | 'section-1' | 'section-2' | 'section-3' | 'section-4' | 'section-5' | 'section-6' | 'section-7' | 'section-8' | 'section-9' | 'class-with-mixin' | 'App_logo' | 'App-logo' | 'my-animation' | 'my-folder-index';"
`;

exports[`helpers / cssSnapshots with goToDefinition enabled with CSS should return a line-accurate dts file 1`] = `
"export let classA: string;export let composed: string;export let composedFromOtherFile: string;



export let classB: string;



export let classC: string;



export let classD: string;





export let parent: string;export let childA: string;



export let childB: string;export let nestedChild: string;





export let fadeIn: string;












declare let _classes: {
  'classA': string;
  'classB': string;
  'classC': string;
  'classD': string;
  'parent': string;
  'childA': string;
  'childB': string;
  'nestedChild': string;
  'composed': string;
  'composedFromOtherFile': string;
  'fadeIn': string;
};
export default _classes;
"
`;

exports[`helpers / cssSnapshots with goToDefinition enabled with CSS should return an object with classes, css, and a source map 1`] = `
{
  "classes": {
    "ClassB": "ClassB",
    "childA": "childA",
    "childB": "childB",
    "class-c": "class-c",
    "classA": "classA",
    "class_d": "class_d",
    "composed": "composed classA",
    "composed-from-other-file": "composed-from-other-file i__imported_className_0",
    "fadeIn": "fadeIn",
    "nestedChild": "nestedChild",
    "parent": "parent",
  },
  "css": ".classA {
  color: rebeccapurple;
}

.ClassB {
  color: rebeccapurple;
}

.class-c {
  color: rebeccapurple;
}

.class_d {
  @mixin postcss-mixin;
  color: rebeccapurple;
}

.parent .childA {
    color: rebeccapurple;
  }

.parent .childB .nestedChild {
      color: rebeccapurple;
    }

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.composed {
  display: block;
}

.composed-from-other-file {
}

/*# sourceMappingURL=src/helpers/__tests__/fixtures/test.module.css.map */",
  "sourceMap": {
    "file": "src/helpers/__tests__/fixtures/test.module.css",
    "mappings": "AAAA;EACE,oBAAoB;AACtB;;AAEA;EACE,oBAAoB;AACtB;;AAEA;EACE,oBAAoB;AACtB;;AAEA;EACE,oBAAoB;EACpB,oBAAoB;AACtB;;AAGE;IACE,oBAAoB;EACtB;;AAEE;MACE,oBAAoB;IACtB;;AAIJ;EACE;IACE,UAAU;EACZ;EACA;IACE,UAAU;EACZ;AACF;;AAEA;EAEE,cAAc;AAChB;;AAEA;AAEA",
    "names": [],
    "sources": [
      "src/helpers/__tests__/fixtures/test.module.css",
    ],
    "sourcesContent": [
      ".classA {
  color: rebeccapurple;
}

.ClassB {
  color: rebeccapurple;
}

.class-c {
  color: rebeccapurple;
}

.class_d {
  @mixin postcss-mixin;
  color: rebeccapurple;
}

.parent {
  .childA {
    color: rebeccapurple;
  }
  .childB {
    .nestedChild {
      color: rebeccapurple;
    }
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.composed {
  composes: classA;
  display: block;
}

.composed-from-other-file {
  composes: className from './_composed.css';
}
",
    ],
    "version": 3,
  },
}
`;

exports[`helpers / cssSnapshots with goToDefinition enabled with Less should return a line-accurate dts file 1`] = `
"export let nestedClassParent: string;export let childClass: string;










export let selectorBlue: string;export let selectorGreen: string;export let selectorRed: string;





export let column1: string;export let column2: string;export let column3: string;export let column4: string;











export let colorSet: string;



declare let _classes: {
  'nestedClassParent': string;
  'childClass': string;
  'selectorBlue': string;
  'selectorGreen': string;
  'selectorRed': string;
  'column1': string;
  'column2': string;
  'column3': string;
  'column4': string;
  'colorSet': string;
};
export default _classes;
"
`;

exports[`helpers / cssSnapshots with goToDefinition enabled with Less should return an object with classes, css, and a source map 1`] = `
{
  "classes": {
    "child-class": "child-class",
    "color-set": "color-set",
    "column-1": "column-1",
    "column-2": "column-2",
    "column-3": "column-3",
    "column-4": "column-4",
    "nested-class-parent": "nested-class-parent",
    "selector-blue": "selector-blue",
    "selector-green": "selector-green",
    "selector-red": "selector-red",
  },
  "css": ".nested-class-parent {
  color: black;
}
.nested-class-parent .child-class {
  font-size: 12px;
}
.selector-blue {
  color: b;
}
.selector-green {
  color: b;
}
.selector-red {
  color: b;
}
.column-1 {
  height: 50px;
}
.column-2 {
  height: 100px;
}
.column-3 {
  height: 150px;
}
.column-4 {
  height: 200px;
}
/* prettier-ignore */
.color-set {
  one-1: blue;
  two-2: green;
  three-3: red;
}
",
  "sourceMap": {
    "file": "src/helpers/__tests__/fixtures/test.module.less",
    "mappings": "AAAA;EACE,YAAA;ACCF;ADFA;EAII,eAAA;ACCJ;ADMG;EACC,QAAA;ACJJ;ADGG;EACC,QAAA;ACDJ;ADAG;EACC,QAAA;ACEJ;ADGG;EACC,YAAA;ACDJ;ADAG;EACC,aAAA;ACEJ;ADHG;EACC,aAAA;ACKJ;ADNG;EACC,aAAA;ACQJ;AACA,oBAAoB;ADEpB;EAEI,WAAA;EAAA,YAAA;EAAA,YAAA;ACCJ",
    "names": [],
    "sources": [
      "[cwd]/src/helpers/__tests__/fixtures/test.module.less",
      "src/helpers/__tests__/fixtures/test.module.less",
    ],
    "version": 3,
  },
}
`;

exports[`helpers / cssSnapshots with goToDefinition enabled with Sass should return a line-accurate dts file 1`] = `
"

export let myFolderIndex: string;


export let localClassInsideGlobal: string;




export let localClass: string;




export let localClass2: string;export let localClassInsideLocal: string;





export let reservedWords: string;








export let nestedClassParent: string;export let childClass: string;


export let nestedClassParentExtended: string;







export let section1: string;export let section2: string;export let section3: string;export let section4: string;export let section5: string;export let section6: string;export let section7: string;export let section8: string;export let section9: string;






export let classWithMixin: string;



export let appLogo: string;





export let appLogo: string;
export let myAnimation: string;
































declare let _classes: {
  'localClassInsideGlobal': string;
  'localClass': string;
  'localClass2': string;
  'localClassInsideLocal': string;
  'reservedWords': string;
  'default': string;
  'const': string;
  'nestedClassParent': string;
  'childClass': string;
  'nestedClassParentExtended': string;
  'section1': string;
  'section2': string;
  'section3': string;
  'section4': string;
  'section5': string;
  'section6': string;
  'section7': string;
  'section8': string;
  'section9': string;
  'classWithMixin': string;
  'appLogo': string;
  'appLogo': string;
  'myAnimation': string;
  'myFolderIndex': string;
};
export default _classes;
"
`;

exports[`helpers / cssSnapshots with goToDefinition enabled with Sass should return an object with classes, css, and a source map 1`] = `
{
  "classes": {
    "App-logo": "App-logo",
    "App_logo": "App_logo",
    "child-class": "child-class",
    "class-with-mixin": "class-with-mixin",
    "const": "const",
    "default": "default",
    "local-class": "local-class",
    "local-class-2": "local-class-2",
    "local-class-inside-global": "local-class-inside-global",
    "local-class-inside-local": "local-class-inside-local",
    "my-animation": "my-animation",
    "my-folder-index": "my-folder-index",
    "nested-class-parent": "nested-class-parent",
    "nested-class-parent--extended": "nested-class-parent--extended",
    "reserved-words": "reserved-words",
    "section-1": "section-1",
    "section-2": "section-2",
    "section-3": "section-3",
    "section-4": "section-4",
    "section-5": "section-5",
    "section-6": "section-6",
    "section-7": "section-7",
    "section-8": "section-8",
    "section-9": "section-9",
  },
  "css": ".global-class {
  color: rebeccapurple;
}

.global-class-2 .local-class-inside-global {
  color: rebeccapurple;
}

.local-class {
  color: rebeccapurple;
}

.local-class-2 .local-class-inside-local {
  color: rebeccapurple;
}

.reserved-words .default {
  color: rebeccapurple;
}

.reserved-words .const {
  color: rebeccapurple;
}

.nested-class-parent .child-class {
  color: rebeccapurple;
}

.nested-class-parent--extended {
  color: rebeccapurple;
}

.section-1 {
  color: rebeccapurple;
}

.section-2 {
  color: rebeccapurple;
}

.section-3 {
  color: rebeccapurple;
}

.section-4 {
  color: rebeccapurple;
}

.section-5 {
  color: rebeccapurple;
}

.section-6 {
  color: rebeccapurple;
}

.section-7 {
  color: rebeccapurple;
}

.section-8 {
  color: rebeccapurple;
}

.section-9 {
  color: rebeccapurple;
}

.class-with-mixin {
  margin: 0;
}

.App_logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: my-animation infinite 20s linear;
  }
}

/*
.commented-parent-class {
  .commented-child-class
}
*/

.my-folder-index {
  text-indent: 9999px;
  margin: 10px;
}",
  "sourceMap": {
    "file": "src/helpers/__tests__/fixtures/test.module.scss",
    "mappings": "AAAA;EACE,oBAAA;ACCF;;ADGE;EACE,oBAAA;ACAJ;;ADIA;EACE,oBAAA;ACDF;;ADKE;EACE,oBAAA;ACFJ;;ADOE;EACE,oBAAA;ACJJ;;ADME;EACE,oBAAA;ACJJ;;ADSE;EACE,oBAAA;ACNJ;;ADQE;EACE,oBAAA;ACNJ;;ADaE;EACE,oBAJI;ACNR;;ADSE;EACE,oBAJI;ACFR;;ADKE;EACE,oBAJI;ACER;;ADCE;EACE,oBAJI;ACMR;;ADHE;EACE,oBAJI;ACUR;;ADPE;EACE,oBAJI;ACcR;;ADXE;EACE,oBAJI;ACkBR;;ADfE;EACE,oBAJI;ACsBR;;ADnBE;EACE,oBAJI;AC0BR;;ADhBA;EE/CE,SFgDoB;ACmBtB;;ADhBA;EACE,cAAA;EACA,oBAAA;ACmBF;;ADhBA;EACE;IACE,2CAAA;ECmBF;AACF;;ADZA;;;;CAAA;;AGjEA;EACE,mBAAA;EDFA,YCGoB;AFoFtB",
    "names": [],
    "sources": [
      "file://[cwd]/src/helpers/__tests__/fixtures/test.module.scss",
      "src/helpers/__tests__/fixtures/test.module.scss",
      "file://[cwd]/src/helpers/__tests__/fixtures/_mixin.scss",
      "file://[cwd]/src/helpers/__tests__/fixtures/my-folder/_index.scss",
    ],
    "version": 3,
  },
}
`;

exports[`helpers / cssSnapshots with loadPaths in sass options should find external file from loadPaths 1`] = `
{
  "big-font": "big-font",
  "class-with-mixin": "class-with-mixin",
}
`;

exports[`helpers / cssSnapshots with loadPaths in stylus options should find external file from loadPaths 1`] = `
{
  "external-class": "external-class",
  "include-path": "include-path",
}
`;

exports[`helpers / cssSnapshots with noUncheckedIndexedAccess enabled should return a dts file with only possibly undefined strings 1`] = `
"declare let _classes: {
  'localClassInsideGlobal'?: string;
  'localClass'?: string;
  'localClass2'?: string;
  'localClassInsideLocal'?: string;
  'reservedWords'?: string;
  'default'?: string;
  'const'?: string;
  'nestedClassParent'?: string;
  'childClass'?: string;
  'nestedClassParentExtended'?: string;
  'section1'?: string;
  'section2'?: string;
  'section3'?: string;
  'section4'?: string;
  'section5'?: string;
  'section6'?: string;
  'section7'?: string;
  'section8'?: string;
  'section9'?: string;
  'classWithMixin'?: string;
  'appLogo'?: string;
  'appLogo'?: string;
  'myAnimation'?: string;
  'myFolderIndex'?: string;
};
export default _classes;
export let localClassInsideGlobal: string | undefined;
export let localClass: string | undefined;
export let localClass2: string | undefined;
export let localClassInsideLocal: string | undefined;
export let reservedWords: string | undefined;
export let nestedClassParent: string | undefined;
export let childClass: string | undefined;
export let nestedClassParentExtended: string | undefined;
export let section1: string | undefined;
export let section2: string | undefined;
export let section3: string | undefined;
export let section4: string | undefined;
export let section5: string | undefined;
export let section6: string | undefined;
export let section7: string | undefined;
export let section8: string | undefined;
export let section9: string | undefined;
export let classWithMixin: string | undefined;
export let appLogo: string | undefined;
export let appLogo: string | undefined;
export let myAnimation: string | undefined;
export let myFolderIndex: string | undefined;
"
`;

exports[`helpers / cssSnapshots with sass @use and a partial should find external file from loadPaths 1`] = `
{
  "class-with-partial": "class-with-partial",
}
`;

exports[`helpers / cssSnapshots with sass @use and a partial should find external file from loadPaths 2`] = `
".class-with-partial {
  background-color: rebeccapurple;
}"
`;
